--- a/Sample/Layout/NavMenu.razor.css
+++ b/Sample/Layout/NavMenu.razor.css
@@ -1,11 +1,8 @@
 .nav {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    padding: 1em;
-
-    
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
-
-    
 
